# epytope

./: .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: pypi-publish.yml  python-test-conda-external.yml  python-test-conda.yml
epytope/: __init__.py
epytope/CleavagePrediction/: PSSM.py
epytope/Core/: Base.py  Result.py
epytope/Data/supportedAlleles/ann/: mhcflurry_2_0.py
epytope/EpitopeAssembly/: EpitopeAssembly.py
epytope/EpitopePrediction/: ANN.py  External.py  PSSM.py
epytope/EpitopeSelection/: OptiTope.py
epytope/HLAtyping/: External.py
epytope/IO/: FileReader.py  MartsAdapter.py
epytope/doc/: conf.py  epytope.EpitopePrediction.rst
epytope/test/: TestEpitopeAssembly.py  TestEpitopePrediction.py  TestOptiTope.py  TestSpacerDesign.py
epytope/tutorials/: EpitopePrediction.ipynb
